--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <div id="tabela">
     <div id="skor" class="info">
         <p>Skor</p>
-        <p>0</p>
+        <p id="score">0</p>
     </div>
 
     <div id="vreme" class="info">
         <p>Vreme</p>
-        <p>0:00</p>
+        <p id="timer"></p>
     </div>
 
     <div id="level" class="info">
@@ -26,7 +26,7 @@
 </div>
 
 <div id="game">
-    <div id="kocka">
+    <div id="kocka" onclick="randomPosiition()">
 
     </div>
 
